fix(ui): improve background contrast

--- a/packages/ui/src/assets/styles.css
+++ b/packages/ui/src/assets/styles.css
@@ -8,7 +8,7 @@ html {
 
 html.dark {
   color-scheme: dark;
-  background-color: #222;
+  background-color: #151515;
   color: white;
 }
 
